--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-social-icons": "^5.15.0",
+    "scrollreveal": "^4.0.9",
+    "typed.js": "^2.0.16",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
